# tubesync

./: environment.yml  pyproject.toml
.github/workflows/: scheduler.yml  test.yml
tubesync/videogram/: asynctyper.py  config.py  consts.py  media.py  telegram.py  utils.py  videogram.py  ytdlp.py
